# python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
src/core/: __init__.py  main.py
tests/: mock_test.py
