
[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "pydantic>=2.12.5",
]
gui-support = false

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "invoke>=2.2.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "pytest-html>=4.1.1",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # formatter handles line length

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_return_any = true
